| Bug #4105 | Server crash on attempt to prepare a statement with character set introducer | ||
|---|---|---|---|
| Submitted: | 11 Jun 2004 12:24 | Modified: | 18 Jun 2004 0:49 |
| Reporter: | Konstantin Osipov | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1.*, 5.* | OS: | Any (All) |
| Assigned to: | Konstantin Osipov | Target Version: | |
[11 Jun 2004 12:24]
Konstantin Osipov
[11 Jun 2004 12:26]
Konstantin Osipov
Verified against 4.1-bk
[17 Jun 2004 23:29]
Konstantin Osipov
bk commit - 4.1 tree (konstantin:1.1929) BUG#4105, bk commit - 4.1 tree (konstantin:1.1930) BUG#4105 (test case)
[18 Jun 2004 0:49]
Konstantin Osipov
Fixed in 4.1.3
